css/style.css
/* Imports */
@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');

/* 1. Use a more-intuitive box-sizing model */
*, *::before, *::after {
    box-sizing: border-box;
  }
  
  /* 2. Remove default margin */
  * {
    margin: 0;
  }
  
  body {
    /* 3. Add accessible line-height */
    line-height: 1.5;
    /* 4. Improve text rendering */
    -webkit-font-smoothing: antialiased;
  }
  
  /* 5. Improve media defaults */
  img, picture, video, canvas, svg {
    display: block;
    max-width: 100%;
  }
  
  /* 6. Inherit fonts for form controls */
  input, button, textarea, select {
    font: inherit;
  }
  
  /* 7. Avoid text overflows */
  p, h1, h2, h3, h4, h5, h6 {
    overflow-wrap: break-word;
  }
  
  /* 8. Improve line wrapping */
  p {
    text-wrap: pretty;
  }
  h1, h2, h3, h4, h5, h6 {
    text-wrap: balance;
  }
  
  /*
    9. Create a root stacking context
  */
  #root, #__next {
    isolation: isolate;
  }


/* END OF CSS RESET */

/* Define default values */
:root{
    --system-ui: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
}

/* Applying default variables to whole page */
body{
    font-family: var(--system-ui);
}

  .container{
    display: flex;
    height: 100vh;
  }

  /*
  Styling image and logo section
  */

  .item-1{
    background-image: url('../images/halie-west-25xggax4bSA-unsplash.jpg'); /* Path to image file */
    background-size: cover; /* Cover the entire container */
    background-position: center; /* Center the image */
    background-repeat: no-repeat; /* Prevent the image from repeating */
    background-attachment: fixed; /* Make the background stay fixed when scrolling */
    width: 30vw;
    height: 100vh; 
  }

    /* Image and logo banner */

  #banner{
    background-color: rgba(65, 78, 92, 0.6);
    margin-top: 20vh;
    height: 15vh;
    color: white;
    font-family: "Orbitron", sans-serif;
    justify-content: center;
    align-items: center;
    font-size: 2em; /* Restricts the size of text to fit */
    display: flex;
  }

  #banner img{
    height: 12vh;
  }

  /*
  Styling form section
  */

  .item-2{
    width: 70vw;
    height: 100vh;
  }

    /* Introduction text section */

  #intro-text{
    display: flex;
    flex-direction: column; /* Stack items vertically */
    align-items: flex-start;  /* Align items to the left of the container */
    justify-content: flex-end; /* Align items to the bottom */
    height: 35vh;
    background-color: #d8d6d6;
    padding: 1em 2em;
    font-size: 0.8em;
  }

    /* Main form section */

    #form{
      background-color: white;
      height: 50vh;
    }

    fieldset{
      display: flex;
      flex-wrap: wrap;
      border: none;
      background: white;
      gap: 10px;
      padding: 1em 2em;
    } 

    legend{
      padding-top: 0.7em;
      font-size: 1.25em;
    }

    label{
      letter-spacing: 1px;
      font-size: 0.7em;
    }

    input{
      display: block;
      border: solid 1px #d2cfcf;
      border-radius: 5px;
    }

    #submit{
      background:#d8d6d6;
    }

    #submit button{
      background-color: #596D48;
      color: white;
      border: none;
      border-radius: 10px;
      padding: 5px 20px 5px 20px;
      font-size: 0.8em;
      margin-bottom: 5px;
    }
    
    /* Button submission section */

  #footer{
    background-color: #d8d6d6;
  }

